Add validation string to Xaml

--- a/Audyt innowacyjności/Page10.xaml
+++ b/Audyt innowacyjności/Page10.xaml
@@ -31,6 +31,7 @@
         <CheckBox Content="" HorizontalAlignment="Left" Margin="474,338,0,0" VerticalAlignment="Top" Width="20" Checked="OdpowiedziDoKlientow" IsChecked="False" Height="22"/>
 
         <Label Content="Źródła innowacji i cele innowacji w firmie" HorizontalAlignment="Left" Margin="242,36,0,0" VerticalAlignment="Top" Width="238"/>
+		<TextBlock  Text="{Binding ValidationErrorsString}" Foreground="Red" HorizontalAlignment="Right"  TextWrapping="Wrap" VerticalAlignment="Top" Height="147" Width="264" Margin="588,4,-52,299"/>
 
-    </Grid>
+	</Grid>
 </Page>
