--- a/Audyt innowacyjności/Page3.xaml
+++ b/Audyt innowacyjności/Page3.xaml
@@ -24,7 +24,8 @@
 
         <Label Content="Strona 2/14" HorizontalAlignment="Left" Margin="328,10,0,0" VerticalAlignment="Top"/>
         <Label Content="Informacje o pracownikach" HorizontalAlignment="Left" Margin="281,36,0,0" VerticalAlignment="Top" />
+		<TextBlock  Text="{Binding ValidationErrorsString}" Foreground="Red" HorizontalAlignment="Right"  TextWrapping="Wrap" VerticalAlignment="Top" Height="147" Width="264" Margin="588,4,-52,299"/>
 
 
-    </Grid>
+	</Grid>
 </Page>
