--- a/Audyt innowacyjności/Page6.xaml
+++ b/Audyt innowacyjności/Page6.xaml
@@ -43,6 +43,7 @@
 
         <Label Content="Strona 5/14" HorizontalAlignment="Left" Margin="328,10,0,0" VerticalAlignment="Top"/>
         <Label Content="Dodatkowe dane o przedsiębiorstwie II" HorizontalAlignment="Left" Margin="268,36,0,0" VerticalAlignment="Top" Width="222"/>
+		<TextBlock  Text="{Binding ValidationErrorsString}" Foreground="Red" HorizontalAlignment="Right"  TextWrapping="Wrap" VerticalAlignment="Top" Height="147" Width="264" Margin="588,4,-52,299"/>
 
-    </Grid>
+	</Grid>
 </Page>
