--- a/Audyt innowacyjności/Page3.xaml
+++ b/Audyt innowacyjności/Page3.xaml
@@ -13,7 +13,7 @@
         <Button Content="Dalej" HorizontalAlignment="Left" Margin="653,408,0,0" VerticalAlignment="Top" Width="75" Click="Next"/>
         <Button Content="Confij" HorizontalAlignment="Left" Margin="573,408,0,0" VerticalAlignment="Top" Width="75" Click="Back"/>
         <!--- Pytanie 3 -->
-        <TextBox x:Name="IloscUmowOPrace" Text="{Binding IloscUmowOPrace, ValidatesOnNotifyDataErrors=True}" HorizontalAlignment="Left" Height="23" Margin="391,184,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" RenderTransformOrigin="-1.562,-1.653"/>
+        <TextBox x:Name="IloscPracownikow" Text="{Binding IloscPracownikow, ValidatesOnNotifyDataErrors=True}" HorizontalAlignment="Left" Height="23" Margin="391,184,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" RenderTransformOrigin="-1.562,-1.653"/>
         <TextBox x:Name="PoziomWyksztalcenia" Text="{Binding PoziomWyksztalcenia, ValidatesOnNotifyDataErrors=True}" HorizontalAlignment="Left" Height="23" Margin="391,212,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" RenderTransformOrigin="-1.562,-1.653"/>
         <Label Content="Liczba zatrudnionych pracowników" HorizontalAlignment="Left" Margin="179,181,0,0" VerticalAlignment="Top" />
         <Label Content="Przeciętny poziom wykształcenia pracownikow" HorizontalAlignment="Left" Margin="118,212,0,0" VerticalAlignment="Top"/>
