--- a/Audyt innowacyjności/Page11.xaml
+++ b/Audyt innowacyjności/Page11.xaml
@@ -10,7 +10,7 @@
 
     <Grid>
         <Button Content="Dalej" HorizontalAlignment="Left" Margin="653,408,0,0" VerticalAlignment="Top" Width="75" Click="Next"/>
-        <Button Content="Confij" HorizontalAlignment="Left" Margin="573,408,0,0" VerticalAlignment="Top" Width="75" Click="Back"/>
+        <Button Content="Cofnij" HorizontalAlignment="Left" Margin="573,408,0,0" VerticalAlignment="Top" Width="75" Click="Back"/>
         <Label Content="Strona 10/14" HorizontalAlignment="Left" Margin="328,10,0,0" VerticalAlignment="Top"/>
 
         <Label Content="Czy w Pana(i) firmie prowadzone są działania w zakresie pomiaru stopnia innowacyjności organizacji?" HorizontalAlignment="Left" Margin="28,160,0,0" VerticalAlignment="Top" Width="542" Height="27"/>
