--- a/Audyt innowacyjności/Page12.xaml
+++ b/Audyt innowacyjności/Page12.xaml
@@ -10,7 +10,7 @@
 
     <Grid>
         <Button Content="Dalej" HorizontalAlignment="Left" Margin="653,408,0,0" VerticalAlignment="Top" Width="75" Click="Next"/>
-        <Button Content="Confij" HorizontalAlignment="Left" Margin="573,408,0,0" VerticalAlignment="Top" Width="75" Click="Back"/>
+        <Button Content="Cofnij" HorizontalAlignment="Left" Margin="573,408,0,0" VerticalAlignment="Top" Width="75" Click="Back"/>
         <Label Content="Strona 11/14" HorizontalAlignment="Left" Margin="328,10,0,0" VerticalAlignment="Top"/>
 
 
