--- a/Audyt innowacyjności/Page2.xaml
+++ b/Audyt innowacyjności/Page2.xaml
@@ -23,7 +23,7 @@
 		<Label Content="Miasto" HorizontalAlignment="Left" Margin="328,240,0,0" VerticalAlignment="Top"/>
 
 		<Button Command="{Binding ValidateCommand}" Content="Dalej" HorizontalAlignment="Left" Margin="653,408,0,0" VerticalAlignment="Top" Width="75" Click="Next"/>
-        <Button Content="Confij" HorizontalAlignment="Left" Margin="573,408,0,0" VerticalAlignment="Top" Width="75" Click="Back"/>
+        <Button Content="Cofnij" HorizontalAlignment="Left" Margin="573,408,0,0" VerticalAlignment="Top" Width="75" Click="Back"/>
 
         <!--- Pytanie drugie -->
 		<TextBox x:Name="WiekPrzedsiebiorstwa" Text="{Binding WiekPrzedsiebiorstwa, ValidatesOnNotifyDataErrors=True}" HorizontalAlignment="Left" Height="23" Margin="391,268,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" RenderTransformOrigin="-1.562,-1.653"/>
