--- a/Audyt innowacyjności/Page5.xaml
+++ b/Audyt innowacyjności/Page5.xaml
@@ -11,7 +11,7 @@
     <Grid>
 
         <Button Content="Dalej" HorizontalAlignment="Left" Margin="653,408,0,0" VerticalAlignment="Top" Width="75" Click="Next"/>
-        <Button Content="Confij" HorizontalAlignment="Left" Margin="573,408,0,0" VerticalAlignment="Top" Width="75" Click="Back"/>
+        <Button Content="Cofnij" HorizontalAlignment="Left" Margin="573,408,0,0" VerticalAlignment="Top" Width="75" Click="Back"/>
 
         <TextBox x:Name="ZasiegDzialalnosci" Text="{Binding ZasiegDzialalnosci, ValidatesOnNotifyDataErrors=True}" HorizontalAlignment="Left" Height="23" Margin="391,156,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" RenderTransformOrigin="-1.562,-1.653"/>
         <Label Content="Zasięg działalności" HorizontalAlignment="Left" Margin="268,159,0,0" VerticalAlignment="Top" />
