--- a/Audyt innowacyjności/Page6.xaml
+++ b/Audyt innowacyjności/Page6.xaml
@@ -11,7 +11,7 @@
     <Grid>
 
         <Button Content="Dalej" HorizontalAlignment="Left" Margin="653,408,0,0" VerticalAlignment="Top" Width="75" Click="Next"/>
-        <Button Content="Confij" HorizontalAlignment="Left" Margin="573,408,0,0" VerticalAlignment="Top" Width="75" Click="Back"/>
+        <Button Content="Cofnij" HorizontalAlignment="Left" Margin="573,408,0,0" VerticalAlignment="Top" Width="75" Click="Back"/>
 
         <Label Content="Czy istnieją i jakie są mechanizmy zapewniające koordynację pracy?" HorizontalAlignment="Left" Margin="10,156,0,0" VerticalAlignment="Top" Width="365" Height="27"/>
         <TextBox x:Name="KoordynacjaPracyKomentarz" Text="{Binding KoordynacjaPracyKomentarz, ValidatesOnNotifyDataErrors=True}" HorizontalAlignment="Left" Height="23" Margin="391,184,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" RenderTransformOrigin="-1.562,-1.653"/>
