--- a/Audyt innowacyjności/Page7.xaml
+++ b/Audyt innowacyjności/Page7.xaml
@@ -10,7 +10,7 @@
 
     <Grid>
         <Button Content="Dalej" HorizontalAlignment="Left" Margin="653,408,0,0" VerticalAlignment="Top" Width="75" Click="Next"/>
-        <Button Content="Confij" HorizontalAlignment="Left" Margin="573,408,0,0" VerticalAlignment="Top" Width="75" Click="Back"/>
+        <Button Content="Cofnij" HorizontalAlignment="Left" Margin="573,408,0,0" VerticalAlignment="Top" Width="75" Click="Back"/>
         <TextBox x:Name="ProcesoweLiczba" Text="{Binding ProcesoweLiczba, ValidatesOnNotifyDataErrors=True}" HorizontalAlignment="Left" Height="23" Margin="456,131,-211,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="55" RenderTransformOrigin="-1.562,-1.653"/>
         <TextBox x:Name="ProcesoweKomentarz" Text="{Binding ProcesoweKomentarz, ValidatesOnNotifyDataErrors=True}" HorizontalAlignment="Left" Height="23" Margin="90,156,-211,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="421" RenderTransformOrigin="-1.562,-1.653"/>
         <TextBox x:Name="ProduktoweLiczba" Text="{Binding ProduktoweLiczba, ValidatesOnNotifyDataErrors=True}" HorizontalAlignment="Left" Height="23" Margin="456,184,-211,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="55" RenderTransformOrigin="-1.562,-1.653"/>
