--- a/Audyt innowacyjności/Page9.xaml
+++ b/Audyt innowacyjności/Page9.xaml
@@ -10,7 +10,7 @@
 
     <Grid>
         <Button Content="Dalej" HorizontalAlignment="Left" Margin="653,408,0,0" VerticalAlignment="Top" Width="75" Click="Next"/>
-        <Button Content="Confij" HorizontalAlignment="Left" Margin="573,408,0,0" VerticalAlignment="Top" Width="75" Click="Back"/>
+        <Button Content="Cofnij" HorizontalAlignment="Left" Margin="573,408,0,0" VerticalAlignment="Top" Width="75" Click="Back"/>
 
         <Label Content="    Z jakich źródeł innowacji korzysta przedsiębiorstwo:" HorizontalAlignment="Left" Margin="74,128,-75,0" VerticalAlignment="Top" />
         <Label Content="Pracownicy" HorizontalAlignment="Left" Margin="306,156,-75,0" VerticalAlignment="Top"/>
